[gd_scene load_steps=7 format=3 uid="uid://b3wpm17pohd5j"]

[ext_resource type="Script" path="res://auto/procedure_manager/procedure_manager.gd" id="1_as8hu"]
[ext_resource type="Script" path="res://addons/godot_state_charts/state_chart.gd" id="2_thdn0"]
[ext_resource type="Script" path="res://addons/godot_state_charts/compound_state.gd" id="3_emx8l"]
[ext_resource type="Script" path="res://addons/godot_state_charts/atomic_state.gd" id="4_4bbtx"]
[ext_resource type="Script" path="res://addons/godot_state_charts/transition.gd" id="5_tlaay"]
[ext_resource type="AudioStream" uid="uid://ku1ssqdxy7eq" path="res://assets/sounds/bgm.ogg" id="6_3m40d"]

[node name="ProcedureManager" type="Node"]
script = ExtResource("1_as8hu")

[node name="StateChart" type="Node" parent="."]
script = ExtResource("2_thdn0")

[node name="Root" type="Node" parent="StateChart"]
script = ExtResource("3_emx8l")
initial_state = NodePath("Launch")

[node name="Launch" type="Node" parent="StateChart/Root"]
script = ExtResource("4_4bbtx")

[node name="To Loading" type="Node" parent="StateChart/Root/Launch"]
script = ExtResource("5_tlaay")
to = NodePath("../../Loading")

[node name="Loading" type="Node" parent="StateChart/Root"]
script = ExtResource("4_4bbtx")

[node name="To BeginGame" type="Node" parent="StateChart/Root/Loading"]
script = ExtResource("5_tlaay")
to = NodePath("../../BeginGame")
event = &"loaded"

[node name="BeginGame" type="Node" parent="StateChart/Root"]
script = ExtResource("4_4bbtx")

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
process_mode = 3
stream = ExtResource("6_3m40d")
autoplay = true
bus = &"Music"

[connection signal="state_entered" from="StateChart/Root/Loading" to="." method="_on_loading_state_entered"]
[connection signal="state_entered" from="StateChart/Root/BeginGame" to="." method="_on_begin_game_state_entered"]
